@@ -13,6 +13,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #24426: Fast searching optimization in regular expressions now works
+  for patterns that starts with capturing groups.  Fast searching optimization
+  now can't be disabled at compile time.
+
 Documentation
 -------------
 
